--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="/images/Logo.png" alt="logo" height="100%" width="100%"></div>
+        <div class="logo"><img src="/amitie/images/Logo.png" alt="logo" height="100%" width="100%"></div>
         <nav>
             <ul>
                 <li>About</li>
@@ -22,7 +22,7 @@
                 <li>Contact</li>
             </ul>
             <div class="menu">
-                <img src="/images/hamburger.png" alt="menu" height="100%" width="100%">
+                <img src="/amitie/images/hamburger.png" alt="menu" height="100%" width="100%">
             </div>
         </nav>
     </header>
@@ -31,13 +31,13 @@
             <div><h1 class="tagline">The friendship app made for <span class="purple">friendship</span></h1></div>
             <div class="download">
                 <div class="app-image">
-                    <img src="/images/App Image.png" alt="app icon" width="100%" height="100%">
+                    <img src="/amitie/images/App Image.png" alt="app icon" width="100%" height="100%">
                 </div>
                 <div class="cta">
                     <p class="download-cta">Get our iOS app from the app store to start making friends today!</p>
                     <a href="https://www.figma.com/proto/yIMzOyDPh4f4SnLFKlXyLp/Amitie-App?page-id=162%3A2398&node-id=162%3A2625&viewport=602%2C255%2C0.14&scaling=scale-down&starting-point-node-id=162%3A2625&show-proto-sidebar=1" class="link">
                         <div class="apple">
-                            <img src="/images/apple.png" alt="apple" height="100%" width="100%">
+                            <img src="/amitie/images/apple.png" alt="apple" height="100%" width="100%">
                         </div>
                         <p class="bold">Download</p>
                     </a>
@@ -46,26 +46,26 @@
             <p class="description">We're not your typical social app. With Amitié, you will finally get the deeper connections and long-lasting friendships you've always wanted. Find your real friends, both on-line and off.</p>
         </div>
         <aside>
-            <img src="/images/mockup.png" alt="amitie" height="100%" class="desktop-mockup">
-            <img src="/images/Amitie mockup..png" alt="amitie" height="100%" class="mobile-mockup">
+            <img src="/amitie/images/mockup.png" alt="amitie" height="100%" class="desktop-mockup">
+            <img src="/amitie/images/Amitie mockup..png" alt="amitie" height="100%" class="mobile-mockup">
         </aside>
     </Section>
     <section class="features">
         <h2>Why we're different:</h2>
         <div class="feature-description">
-            <div class="feature-icon"><img src="/images/chat icon.png" alt="icon" height="100%" width="100%"></div>
+            <div class="feature-icon"><img src="/amitie/images/chat icon.png" alt="icon" height="100%" width="100%"></div>
             <p>
                 AI helps you get the conversation going - no more thinking up awkward small talk
             </p>
         </div>
         <div class="feature-description">
-            <div class="feature-icon"><img src="/images/map icon.png" alt="icon" height="100%" width="100%"></div> 
+            <div class="feature-icon"><img src="/amitie/images/map icon.png" alt="icon" height="100%" width="100%"></div> 
             <p>
                 Friendships as unique as you are - find all ongoing and future events that match your interests perfectly.
             </p>
         </div>
         <div class="feature-description">
-            <div class="feature-icon"><img src="/images/friends icon.png" alt="icon" height="100%" width="100%"></div> 
+            <div class="feature-icon"><img src="/amitie/images/friends icon.png" alt="icon" height="100%" width="100%"></div> 
             <p>
                 No distractions - all relationships have their place, but we’re focused only friendships. No need to worry about any mixed signals here.
             </p>
@@ -73,7 +73,7 @@
     </section>
     <footer>
         <div class="socials">
-            <img src="/images/Socials.png" alt="socials" height="100%" width="100%">
+            <img src="/amitie/images/Socials.png" alt="socials" height="100%" width="100%">
         </div>
         <p class="copyright">Copyright 2022 - Amitié</p>
     </footer>
